<resources>
    <string name="app_name">BatteryManager</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_battle_level_toast">Enable battery level toast</string>
    <string name="pref_description_battle_level_toast">Show battery level toast when battery status changed.
        Enable this maybe receive many toast.
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="priority_list_messages">Change Notification Priority</string>
    <string-array name="priority_list_titles">
        <item>Priority Max</item>
        <item>Priority Normal</item>
        <item>Priority Min</item>
    </string-array>
    <string-array name="priority_list_values">
        <item>2</item>
        <item>0</item>
        <item>-2</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
